Correction des problèmes d'intégration de Jitsi Meet et amélioration de la politique de sécurité

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <!-- Ajout de méta-tags pour éviter le chargement de contenu tiers -->
     <meta name="referrer" content="no-referrer">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://meet.jit.si wss: ws: 'unsafe-inline'; script-src 'self' https://meet.jit.si 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://meet.jit.si wss: ws:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://meet.jit.si wss: ws: 'unsafe-inline' 'unsafe-eval'; script-src 'self' https://meet.jit.si 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://meet.jit.si wss: ws:; frame-src 'self' https://meet.jit.si; img-src 'self' https://meet.jit.si data: blob:; media-src 'self' https://meet.jit.si data: blob:;">
 </head>
 <body>
     <div class="container">
