Utilisation d'une instance Jitsi Meet alternative pour résoudre les problèmes d'accès

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Démocratie Directe 2</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src='https://meet.jit.si/external_api.js'></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src='https://jitsi.belnet.be/external_api.js'></script>
     <script src="/socket.io/socket.io.js"></script>
     <!-- Ajout de méta-tags pour éviter le chargement de contenu tiers -->
     <meta name="referrer" content="no-referrer">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://meet.jit.si wss: ws: 'unsafe-inline' 'unsafe-eval'; script-src 'self' https://meet.jit.si 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://meet.jit.si wss: ws:; frame-src 'self' https://meet.jit.si; img-src 'self' https://meet.jit.si data: blob:; media-src 'self' https://meet.jit.si data: blob:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://meet.jit.si https://jitsi.belnet.be wss: ws: 'unsafe-inline' 'unsafe-eval'; script-src 'self' https://meet.jit.si https://jitsi.belnet.be 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://meet.jit.si https://jitsi.belnet.be wss: ws:; frame-src 'self' https://meet.jit.si https://jitsi.belnet.be; img-src 'self' https://meet.jit.si https://jitsi.belnet.be data: blob:; media-src 'self' https://meet.jit.si https://jitsi.belnet.be data: blob:;">
 </head>
 <body>
     <div class="container">
